2005-09-24  Roger Leigh  <rleigh@debian.org>

	* debian/preinst, debian/postinst: Preserve schroot.conf changes
	correctly when moving to /etc/schroot/schroot.conf, by checking
	the md5sum to detect local modifictions.  If not modified, delete
	and replace with the package version.

2005-09-22  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-session.c (sbuild_session_run): Move chroot mount
	location fallback from sbuild_session_setup_chroot.

	* schroot/schroot.conf.5.in: Add additional "run-setup" notes.

2005-09-21  Roger Leigh  <rleigh@debian.org>

	* debian/changelog: Bump version to 0.1.6.  Document run-setup
	changes for Debian Bug #329403.

	* schroot/schroot.conf.5.in: Document "run-setup" configuration
	option.

	* schroot/sbuild-session.c (sbuild_session_run): Only run setup
	scripts if enabled in the chroot configuration.

	* schroot/sbuild-chroot.c
	(sbuild_chroot_class_init): Add "run-setup" property, and
	associated accessors.
	(sbuild_chroot_new_from_keyfile): Add support for G_TYPE_BOOLEAN
	properties as configuration options.

	* schroot/sbuild-chroot.h (struct _SbuildChroot): Add run_setup
	member.

2005-09-20  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-chroot.c
	(sbuild_chroot_new_from_keyfile): Fix a memory leak during chroot
	type identification.  Reorganise code to make layout more logical.
	(sbuild_chroot_print_details): Format detail listing to make it
	more readable, in the same style as used by the LVM tools.

	* schroot/sbuild-config.c (sbuild_config_load): Only add chroots
	to the SbuildConfig if they were successfully constructed.

2005-09-18  Roger Leigh  <rleigh@debian.org>

	* schroot/sbuild-session.c (sbuild_session_class_init): Add a new
	session-id property and associated accessors, which handle
	conversions between a string and uuid_t.

	* schroot/sbuild-session.h (struct _SbuildSession): Add a new
	session_id member containing the session UUID.

	* schroot/sbuild-config.c